# Tiremo-Accelerator-Workshops-Secure-IoT

./: .gitignore  README.md  SetUp.md  gitignore
Binary/: Led_blink.hex  empa_esp32_mqtt_aws.hex  empa_sensor_process.hex  empa_slm320_4g.hex  esp32_enable.hex
Project/: README.md  RunningCode.md
Project/CyberWhiz/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Project/CyberWhiz/components/cyberwhiz-core-lib/: CMakeLists.txt
Project/CyberWhiz/components/cyberwhiz-core-lib/include/: ap_manager.h  atca_config.h  ble_gatts.h  crypto_aes_ble.h  custom_mbedtls_config.h  hsm_manager.h  mqtt_handler 2.h  mqtt_handler.h  network_controller.h  nvs_memory.h  ota_manager.h  secure_mercek 2.h  sntp_controller.h  telemetry.h  timer_handler.h  uart_handler.h  utils.h  version.h
Project/CyberWhiz/components/esp-cryptoauthlib/: CMakeLists.txt
Project/CyberWhiz/components/esp-cryptoauthlib/cryptoauthlib/lib/: atca_config.h
Project/CyberWhiz/main/: CMakeLists.txt  demo_application.c
Project/Led_blink/: Led_blink.mproj
Project/Led_blink/Configuration/Pin/: user_pin_config.yaml  user_pin_map.yaml
Project/Led_blink/Configuration/UserApplication/Debug/: user_serial_debug_config.yaml
Project/Led_blink/Generation/AUDK32_A34xxxx-1.0.12/Example/Source/TmplUserApp/: prv_user_code.c
Project/Led_blink/Generation/AUDK32_A34xxxx-1.0.12/ProductConfig/A34G43x/Config/: startup_a34g43x.h
Project/Led_blink/Generation/AUDK32_A34xxxx-1.0.12/ProductConfig/Config/: abov_config.h
Project/Tiremo/: Tiremo.mproj
Project/Tiremo/Configuration/Pin/: user_pin_config.yaml
Project/Tiremo/Generation/AUDK32_A34xxxx-1.0.12/Example/Source/TmplUserApp/: main.c  prv_user_code.c  user_uart_isr.c
Project/Tiremo/Generation/AUDK32_A34xxxx-1.0.12/ProductConfig/A34G43x/Config/: startup_a34g43x.h
(+35 files in other folders)
